数据收集基本完成

--- a/example/localstorage.html
+++ b/example/localstorage.html
@@ -41,7 +41,13 @@
     <script src="../dist/logline.js"></script>
     <script src="./main.js"></script>
     <script>
-        test('localstorage');
+        Logline.setConfig({
+            loadEventEnd: 1
+        })
+        Logline.init()
+        setTimeout(() => {
+            throw 'sss'
+        },5000)
     </script>
 </body>
 </html>
